chore: setup theme with tailwind

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,119 +4,184 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-noto-sans);
-  --font-mono: var(--font-noto-sans-mono);
-  --color-sidebar-ring: var(--sidebar-ring);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar: var(--sidebar);
-  --color-chart-5: var(--chart-5);
-  --color-chart-4: var(--chart-4);
-  --color-chart-3: var(--chart-3);
-  --color-chart-2: var(--chart-2);
-  --color-chart-1: var(--chart-1);
-  --color-ring: var(--ring);
-  --color-input: var(--input);
-  --color-border: var(--border);
-  --color-destructive: var(--destructive);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-accent: var(--accent);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-muted: var(--muted);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-secondary: var(--secondary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-primary: var(--primary);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-popover: var(--popover);
-  --color-card-foreground: var(--card-foreground);
-  --color-card: var(--card);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
+  --color-gfe-text-primary: var(--gfe-text-primary);
+  --color-gfe-text-primary-hover: var(--gfe-text-primary-hover);
+  --color-gfe-text-primary-invert: var(--gfe-text-primary-invert);
+  --color-gfe-text-secondary: var(--gfe-text-secondary);
+  --color-gfe-text-tertiary: var(--gfe-text-tertiary);
+  --color-gfe-text-brand: var(--gfe-text-brand);
+  --color-gfe-text-disabled: var(--gfe-text-disabled);
+  --color-gfe-text-error: var(--gfe-text-error);
+  --color-gfe-text-error-emphasis: var(--gfe-text-error-emphasis);
+  --color-gfe-text-success: var(--gfe-text-success);
+  --color-gfe-text-warning: var(--gfe-text-warning);
+
+  --color-gfe-bg-primary: var(--gfe-bg-primary);
+  --color-gfe-bg-primary-inverted: var(--gfe-bg-primary-inverted);
+  --color-gfe-bg-primary-hover: var(--gfe-bg-primary-hover);
+  --color-gfe-bg-secondary: var(--gfe-bg-secondary);
+  --color-gfe-bg-secondary-hover: var(--gfe-bg-secondary-hover);
+  --color-gfe-bg-tertiary: var(--gfe-bg-tertiary);
+  --color-gfe-bg-disabled: var(--gfe-bg-disabled);
+  --color-gfe-bg-disabled-emphasize: var(--gfe-bg-disabled-emphasize);
+  --color-gfe-bg-brand-primary: var(--gfe-bg-brand-primary);
+  --color-gfe-bg-brand-primary-emphasize: var(--gfe-bg-brand-primary-emphasize);
+  --color-gfe-bg-error: var(--gfe-bg-error);
+  --color-gfe-bg-error-emphasize: var(--gfe-bg-error-emphasize);
+  --color-gfe-bg-error-subtle: var(--gfe-bg-error-subtle);
+  --color-gfe-bg-success-subtle: var(--gfe-bg-success-subtle);
+  --color-gfe-bg-brand-subtle: var(--gfe-bg-brand-subtle);
+  --color-gfe-bg-neutral-subtle: var(--gfe-bg-neutral-subtle);
+  --color-gfe-bg-warning-subtle: var(--gfe-bg-warning-subtle);
+
+  --color-gfe-line-primary: var(--gfe-line-primary);
+  --color-gfe-line-secondary: var(--gfe-line-secondary);
+  --color-gfe-line-success: var(--gfe-line-success);
+  --color-gfe-line-brand-solid: var(--gfe-line-brand-solid);
+  --color-gfe-line-brand-subtle: var(--gfe-line-brand-subtle);
+  --color-gfe-line-error-subtle: var(--gfe-line-error-subtle);
+  --color-gfe-line-warning-subtle: var(--gfe-line-warning-subtle);
+
+  --color-gfe-icon-emphasize: var(--gfe-icon-emphasize);
+  --color-gfe-icon-primary: var(--gfe-icon-primary);
+  --color-gfe-icon-primary-hover: var(--gfe-icon-primary-hover);
+  --color-gfe-icon-brand: var(--gfe-icon-brand);
+  --color-gfe-icon-brand-background: var(--gfe-icon-brand-background);
+  --color-gfe-icon-success: var(--gfe-icon-success);
+  --color-gfe-icon-error: var(--gfe-icon-error);
+  --color-gfe-icon-warning: var(--gfe-icon-warning);
+
+  --color-gfe-form-text-title: var(--gfe-form-text-title);
+  --color-gfe-form-text-placeholder: var(--gfe-form-text-placeholder);
+  --color-gfe-form-text-hint: var(--gfe-form-text-hint);
+  --color-gfe-form-text-filled: var(--gfe-form-text-filled);
+  --color-gfe-form-text-disabled: var(--gfe-form-text-disabled);
+  --color-gfe-form-text-error: var(--gfe-form-text-error);
+  --color-gfe-form-background: var(--gfe-form-background);
+  --color-gfe-form-border: var(--gfe-form-border);
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --gfe-text-primary: #171717;
+  --gfe-text-primary-hover: #0a0a0a;
+  --gfe-text-primary-invert: #fff;
+  --gfe-text-secondary: #525252;
+  --gfe-text-tertiary: #737373;
+  --gfe-text-brand: #4338ca;
+  --gfe-text-disabled: #a3a3a3;
+  --gfe-text-error: #dc2626;
+  --gfe-text-error-emphasis: #991b1b;
+  --gfe-text-success: #15803d;
+  --gfe-text-warning: #a16207;
+
+  --gfe-bg-primary: #fff;
+  --gfe-bg-primary-inverted: #0a0a0a;
+  --gfe-bg-primary-hover: #fafafa;
+  --gfe-bg-secondary: #e5e7eb;
+  --gfe-bg-secondary-hover: #d1d5db;
+  --gfe-bg-tertiary: #fafafa;
+  --gfe-bg-disabled: #f5f5f5;
+  --gfe-bg-disabled-emphasize: #f3f4f6;
+  --gfe-bg-brand-primary: #4338ca;
+  --gfe-bg-brand-primary-emphasize: #3730a3;
+  --gfe-bg-error: #dc2626;
+  --gfe-bg-error-emphasize: #b91c1c;
+  --gfe-bg-error-subtle: #fef2f2;
+  --gfe-bg-success-subtle: #f0fdf4;
+  --gfe-bg-brand-subtle: #eef2ff;
+  --gfe-bg-neutral-subtle: #f9fafb;
+  --gfe-bg-warning-subtle: #fffbeb;
+
+  --gfe-line-primary: #e5e5e5;
+  --gfe-line-secondary: #9ca3af;
+  --gfe-line-success: #bbf7d0;
+  --gfe-line-brand-solid: #4f46e5;
+  --gfe-line-brand-subtle: #c7d2fe;
+  --gfe-line-error-subtle: #fecaca;
+  --gfe-line-warning-subtle: #fde68a;
+
+  --gfe-icon-emphasize: #404040;
+  --gfe-icon-primary: #a3a3a3;
+  --gfe-icon-primary-hover: #737373;
+  --gfe-icon-brand: #6366f1;
+  --gfe-icon-brand-background: #eef2ff;
+  --gfe-icon-success: #15803d;
+  --gfe-icon-error: #dc2626;
+  --gfe-icon-warning: #facc15;
+
+  --gfe-form-text-title: #404040;
+  --gfe-form-text-placeholder: #737373;
+  --gfe-form-text-hint: #737373;
+  --gfe-form-text-filled: #171717;
+  --gfe-form-text-disabled: #a3a3a3;
+  --gfe-form-text-error: #dc2626;
+  --gfe-form-background: #fafafa;
+  --gfe-form-border: #e5e5e5;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --gfe-text-primary: #171717;
+  --gfe-text-primary-hover: #0a0a0a;
+  --gfe-text-primary-invert: #fff;
+  --gfe-text-secondary: #525252;
+  --gfe-text-tertiary: #737373;
+  --gfe-text-brand: #4338ca;
+  --gfe-text-disabled: #a3a3a3;
+  --gfe-text-error: #dc2626;
+  --gfe-text-error-emphasis: #991b1b;
+  --gfe-text-success: #15803d;
+  --gfe-text-warning: #a16207;
+
+  --gfe-bg-primary: #fff;
+  --gfe-bg-primary-inverted: #0a0a0a;
+  --gfe-bg-primary-hover: #fafafa;
+  --gfe-bg-secondary: #e5e7eb;
+  --gfe-bg-secondary-hover: #d1d5db;
+  --gfe-bg-tertiary: #fafafa;
+  --gfe-bg-disabled: #f5f5f5;
+  --gfe-bg-disabled-emphasize: #f3f4f6;
+  --gfe-bg-brand-primary: #4338ca;
+  --gfe-bg-brand-primary-emphasize: #3730a3;
+  --gfe-bg-error: #dc2626;
+  --gfe-bg-error-emphasize: #b91c1c;
+  --gfe-bg-error-subtle: #fef2f2;
+  --gfe-bg-success-subtle: #f0fdf4;
+  --gfe-bg-brand-subtle: #eef2ff;
+  --gfe-bg-neutral-subtle: #f9fafb;
+  --gfe-bg-warning-subtle: #fffbeb;
+
+  --gfe-line-primary: #e5e5e5;
+  --gfe-line-secondary: #9ca3af;
+  --gfe-line-success: #bbf7d0;
+  --gfe-line-brand-solid: #4f46e5;
+  --gfe-line-brand-subtle: #c7d2fe;
+  --gfe-line-error-subtle: #fecaca;
+  --gfe-line-warning-subtle: #fde68a;
+
+  --gfe-icon-emphasize: #404040;
+  --gfe-icon-primary: #a3a3a3;
+  --gfe-icon-primary-hover: #737373;
+  --gfe-icon-brand: #6366f1;
+  --gfe-icon-brand-background: #eef2ff;
+  --gfe-icon-success: #15803d;
+  --gfe-icon-error: #dc2626;
+  --gfe-icon-warning: #facc15;
+
+  --gfe-form-text-title: #404040;
+  --gfe-form-text-placeholder: #737373;
+  --gfe-form-text-hint: #737373;
+  --gfe-form-text-filled: #171717;
+  --gfe-form-text-disabled: #a3a3a3;
+  --gfe-form-text-error: #dc2626;
+  --gfe-form-background: #fafafa;
+  --gfe-form-border: #e5e5e5;
 }
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-gfe-line-secondary;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-gfe-bg-primary text-gfe-text-primary;
   }
 }
